@@ -19,6 +19,8 @@ import java.util.Optional;
 import static comp1110.ass2.RailroadInk.*;
 import static javafx.scene.paint.Color.CYAN;
 
+//fx config: --module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml,javafx.media
+
 /**
  * A very simple viewer for tile placements in the Railroad Ink game.
  * <p>
@@ -42,42 +44,42 @@ public class Viewer extends Application {
     String c = "";
 
     /**
+     * Author: Yusen Wei
      * used to set the proper rotation
-     *
-     * @param a
-     * @param n
-     * @return
+     * @param imageview
+     * @param n the rotation count
+     * @return the proper rotated imageview
      */
-    static ImageView rotation(ImageView a, int n) {
+    static ImageView rotation(ImageView imageview, int n) {
         if (n == 0) {
-            a.setRotate(0);
+            imageview.setRotate(0);
         }
         if (n == 1) {
-            a.setRotate(90);
+            imageview.setRotate(90);
         }
         if (n == 2) {
-            a.setRotate(180);
+            imageview.setRotate(180);
         }
         if (n == 3) {
-            a.setRotate(270);
+            imageview.setRotate(270);
         }
         if (n == 4) {
-            a.setScaleX(-1);
-            a.setRotate(0);
+            imageview.setScaleX(-1);
+            imageview.setRotate(0);
         }
         if (n == 5) {
-            a.setScaleX(-1);
-            a.setRotate(90);
+            imageview.setScaleX(-1);
+            imageview.setRotate(90);
         }
         if (n == 6) {
-            a.setScaleX(-1);
-            a.setRotate(180);
+            imageview.setScaleX(-1);
+            imageview.setRotate(180);
         }
         if (n == 7) {
-            a.setScaleX(-1);
-            a.setRotate(270);
+            imageview.setScaleX(-1);
+            imageview.setRotate(270);
         }
-        return a;
+        return imageview;
     }
 
     /**
@@ -98,9 +100,10 @@ public class Viewer extends Application {
     }
 
     /**
-     * Draw a placement or a sets of placements in the window, this is the method
-     *
+     * Author: Yusen Wei
+     * Draw a placement or a sets of placements in the window, this is the method, and also adds the background of color cyan
      * @param placement
+     * @param root
      */
     void placing(String placement, Group root) {
         if (isTilePlacementWellFormed(placement)) {
@@ -326,7 +329,11 @@ public class Viewer extends Application {
         controls.getChildren().add(hb);
     }
 
-    //the method to set the board
+    /**
+     * Author: Yusen Wei
+     * This method to set the board including all the fird line, central area, exits
+     * @param group
+     */
     private void setBoard(Group group) {
         //set board
         GridPane m = new GridPane();
@@ -463,7 +470,9 @@ public class Viewer extends Application {
 
         //set board
         setBoard(root);
-
+        diceRoll = generateDiceRoll();
+     
+        showNormalTiles(diceRoll);
         root.getChildren().add(controls);
 
         makeControls();
@@ -472,6 +481,7 @@ public class Viewer extends Application {
         showSpecialTiles();
         nextRound();
         setAIScene(primaryStage, scene);
+        setRoundCount();
 
         //end the game if there is no more valid moves
         //if (GenerateMoves.generateValidMoves(boardString, diceRoll).size() == 0)
@@ -517,12 +527,18 @@ public class Viewer extends Application {
         });
     }
 
+    /**
+     * Author: Yusen Wei
+     * the method to show the next round label and to set the next round
+     */
     private void nextRound() {
         Button button = new Button("Next Round");
         button.setOnAction(e -> {
             System.out.println("the boardString for next round: " + boardString);
             if (isValidPlacementSequence(boardString)) {
                 roundCount++;
+                if(roundCount == 9)
+                    endGame();
                 diceRoll = "";
                 diceRoll = generateDiceRoll();
                 clearNormalTiles();
@@ -552,50 +568,42 @@ public class Viewer extends Application {
         controls.getChildren().add(hb);
     }
 
-    //the method to clear the norma tiles at the beginning of each round
+    /**
+     * Author: Yusen Wei
+     * the method to clear all the unused normal tiles at the beginning of each round
+     */
     private void clearNormalTiles() {
         for (var v : root.getChildren()) {
-            if (v instanceof Group) {
-                for (var v2 : ((Group) v).getChildren()) {
-                    if (v2 instanceof ImageView) {
-                        if (((ImageView) v2).getX() >= 110 && ((ImageView) v2).getX() <= 150 && ((ImageView) v2).getY() >= 70 && ((ImageView) v2).getY() <= 510) {
-                            ((Group) v).getChildren().remove(v2);
-                        }
-                    }
+            if (v instanceof ImageView) {
+                if (((ImageView) v).getX() == 130) {
+                    v.setVisible(false);
                 }
             }
         }
     }
 
-    //the method to end the game
-    private void endGame(Stage primaryStage) {
+
+    /**
+     * Author: Yusen Wei
+     * the method to end the game
+     */
+    private void endGame() {
         Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
         alert.setTitle("You have completed the game");
-        alert.setHeaderText("You have completed the game, the basic score you got is: " + getBasicScore(boardString));
-        alert.setContentText("Do you want to start a new game?");
-
-        Optional<ButtonType> result = alert.showAndWait();
-        if (result.get() == ButtonType.OK) {
-            primaryStage.close();
-        } else {
-            primaryStage.close();
-        }
+        alert.setHeaderText("");
+        alert.setContentText("You have completed the game!\nBasic score: " + getBasicScore(boardString) + "     AI: " + getBasicScore(b) + "\nTotal score: " + getAdvancedScore(boardString) + "     AI: " + getAdvancedScore(b));
+        alert.showAndWait();
     }
 
 
     //the parameter that stores which round we are at
-    int roundCount = 0;
+    int roundCount = 1;
 
-    //set the label of roundCount
+    /**
+     * Author: Yusen Wei
+     * the method to set the roundCount label
+     */
     private void setRoundCount() {
-        /*
-        for (var v : root.getChildren()) {
-            if (v instanceof HBox) {
-                if (v.getLayoutX() == 30)
-                    root.getChildren().remove(v);
-            }
-        }
-         */
         Label labelRound = new Label("Round " + roundCount);
         labelRound.setFont(new Font("Verdana", 50));
         HBox roundBox = new HBox();
@@ -607,7 +615,10 @@ public class Viewer extends Application {
         root.getChildren().add(roundBox);
     }
 
-    //show Ss tiles
+    /**
+     * Author: Yusen Wei
+     * the method to show all the special tiles to be placed
+     */
     void showSpecialTiles() {
         //S0
         Image S0 = new Image(Viewer.class.getResource(Viewer.URI_BASE + "S0.png").toString());
@@ -665,7 +676,11 @@ public class Viewer extends Application {
         root.getChildren().add(s5);
     }
 
-    //show ABs draggable tiles
+    /**
+     * Author: Yusen Wei
+     * This method to show the 4 normal tiles based on diceRoll
+     * @param diceRoll
+     */
     void showNormalTiles(String diceRoll) {
         //ABs
         String[] rollString = new String[4];
@@ -781,7 +796,11 @@ public class Viewer extends Application {
     //boardString arrayList
     //ArrayList<String> boardStringList = new ArrayList<>();
 
-    //the method to move the tiles properly
+    /**
+     * Author: Yusen Wei
+     * the method to move the tiles
+     * @param imageView
+     */
     private void moveTile(ImageView imageView) {
         /*
         if (roundCount != 0){
@@ -796,7 +815,12 @@ public class Viewer extends Application {
         });
     }
 
-    //the method to drag the tiles, adding the function to only use one special tile each round, maximum 3
+
+    /**
+     * Author: Yusen Wei
+     * the method to drag the tiles
+     * @param imageView
+     */
     private void dragTile(ImageView imageView) {
         imageView.setOnMouseDragged(mouseEvent -> {
             imageView.setX(mouseEvent.getSceneX() - 40);
@@ -822,7 +846,12 @@ public class Viewer extends Application {
     //the parameter to record the scroll count
     int rotationCount = 0;
 
-    //the methods to rotate the tiles
+
+    /**
+     * Author: Yusen Wei
+     * the methods to rotate the tiles based on the rotationCount
+     * @param imageView
+     */
     private void rotateTile(ImageView imageView) {
         imageView.setOnScroll(scrollEvent -> {
             rotationCount++;
@@ -835,7 +864,11 @@ public class Viewer extends Application {
         });
     }
 
-    //check the tile is in position or not
+    /**
+     * Author: Yusen Wei
+     * check the tile is in position or not, if it's near the area of a placed slot, snap the tile to the correct position
+     * @param imageView
+     */
     private void inPosition(ImageView imageView) {
         //origin slots in place
         for (int i = 0; i < 6; i++) {
@@ -877,6 +910,10 @@ public class Viewer extends Application {
         }
     }
 
+    /**
+     * Author: Yusen Wei
+     * the method to refresh the boardString of the whole board every time the mouse is released
+     */
     private void updateBoardString() {
         //initialise boardString
         boardString = "";
@@ -910,7 +947,11 @@ public class Viewer extends Application {
         System.out.println(boardString);
     }
 
-    //reverse the rotation process and get the rotation count value
+    /**
+     * Author: Yusen Wei
+     * This method reverses the rotation process and gets the rotation count value
+     * @param imageView
+     */
     private int reverseRotation(ImageView imageView) {
         int count = 0;
         if (imageView.getScaleX() == -1)
